elements gap fix

--- a/procedural-generation/index.css
+++ b/procedural-generation/index.css
@@ -211,6 +211,7 @@ button[data-tooltip]:hover::after {
     #menuContainer {
         flex-direction: column-reverse;
         align-items: center;
+        gap: 20px;
         top: 920px;
     }
 
